k3s-manifests/backend-wandoor/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wandoor-backend
  namespace: wandoor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wandoor-backend
  template:
    metadata:
      labels:
        app: wandoor-backend
    spec:
      # -- INIT CONTAINER (Download java agent)
      containers:
        - name: backend
          image: jrtr1/wandoor-backend-app:backend-1fb2dfa8f34beb07d3381879bd2dec1afeb797c1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: otel-agent
              mountPath: /otel

      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: wandoor
spec:
  selector:
    app: wandoor-backend
  type: NodePort
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      nodePort: 30080
      protocol: TCP
